# ebpf-backdoor-demo

./: .gitignore  CMakeLists.txt  README.md  cpo  loader_rop.c  loader_rop_trigger  loader_rwx.c  run_rop  run_rwx
bpf/: backdoor_rop.c  backdoor_rwx.c
libc_rop/: main.py  requirements.txt
php_docker/: docker-compose.yml
